// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReputationLoading snapshot – loading skeleton matches snapshot for the loading skeleton (aria-busy state) 1`] = `
<main
  aria-busy="true"
  class="min-h-screen p-8"
>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    role="status"
  >
    Loading reputation…
  </span>
  <div
    aria-hidden="true"
    class="mb-6 h-8 w-32 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
  />
  <section
    class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
  >
    <div
      aria-hidden="true"
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <div
        class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="h-16 w-16 rounded-2xl bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="space-y-2"
          >
            <div
              class="h-3.5 w-28 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
            />
            <div
              class="h-6 w-40 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
            />
          </div>
        </div>
        <div
          class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 sm:p-5 lg:w-72"
        >
          <div
            class="h-3.5 w-36 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="h-3 w-full rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="h-3 w-4/5 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
        </div>
      </div>
      <div
        class="mt-8 grid gap-4 sm:grid-cols-3"
      >
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5 space-y-3"
        >
          <div
            class="h-3.5 w-28 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="h-8 w-20 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5 space-y-3"
        >
          <div
            class="h-3.5 w-28 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="h-8 w-20 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5 space-y-3"
        >
          <div
            class="h-3.5 w-28 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="h-8 w-20 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <div
        class="mb-6 flex items-center justify-between gap-4"
      >
        <div
          class="space-y-2"
        >
          <div
            class="h-6 w-44 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="h-3.5 w-64 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
        </div>
        <div
          class="h-6 w-28 rounded-full bg-slate-200 animate-shimmer motion-reduce:animate-none"
        />
      </div>
      <ol
        class="space-y-4"
      >
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div
              class="space-y-2"
            >
              <div
                class="h-3.5 w-24 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
              <div
                class="h-5 w-56 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
            </div>
            <div
              class="h-3.5 w-20 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
            />
          </div>
        </li>
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div
              class="space-y-2"
            >
              <div
                class="h-3.5 w-24 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
              <div
                class="h-5 w-56 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
            </div>
            <div
              class="h-3.5 w-20 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
            />
          </div>
        </li>
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div
              class="space-y-2"
            >
              <div
                class="h-3.5 w-24 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
              <div
                class="h-5 w-56 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
            </div>
            <div
              class="h-3.5 w-20 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
            />
          </div>
        </li>
      </ol>
    </div>
  </section>
</main>
`;

exports[`ReputationPageContent snapshot – empty state (negative score) matches snapshot when score is negative 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <div
    aria-labelledby="_r_2_"
    class="flex flex-col items-center justify-center px-4 py-8 text-center sm:px-8 sm:py-10"
    role="region"
  >
    <div
      aria-hidden="true"
      class="mb-5 inline-flex h-24 w-24 items-center justify-center rounded-2xl ring-1 bg-amber-50 text-amber-700 ring-amber-100"
    >
      <svg
        aria-hidden="true"
        class="h-16 w-16"
        fill="none"
        viewBox="0 0 64 64"
      >
        <path
          d="M32 10l6.2 12.6 13.9 2-10 9.8 2.4 13.8L32 41.7 19.6 48.2l2.4-13.8-10-9.8 13.9-2L32 10z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="4"
        />
        <path
          d="M24 54h16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
    </div>
    <h2
      class="mb-2 max-w-xl text-xl font-semibold text-gray-950"
      id="_r_2_"
    >
      No reputation yet
    </h2>
    <p
      class="mb-5 max-w-md text-sm leading-6 text-gray-700 sm:text-base"
    >
      Your reputation will be built as you complete contracts and receive feedback from clients. Start by creating and fulfilling your first contract.
    </p>
  </div>
</main>
`;

exports[`ReputationPageContent snapshot – empty state (null data) matches snapshot when reputationData is null 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <div
    aria-labelledby="_r_0_"
    class="flex flex-col items-center justify-center px-4 py-8 text-center sm:px-8 sm:py-10"
    role="region"
  >
    <div
      aria-hidden="true"
      class="mb-5 inline-flex h-24 w-24 items-center justify-center rounded-2xl ring-1 bg-amber-50 text-amber-700 ring-amber-100"
    >
      <svg
        aria-hidden="true"
        class="h-16 w-16"
        fill="none"
        viewBox="0 0 64 64"
      >
        <path
          d="M32 10l6.2 12.6 13.9 2-10 9.8 2.4 13.8L32 41.7 19.6 48.2l2.4-13.8-10-9.8 13.9-2L32 10z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="4"
        />
        <path
          d="M24 54h16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
    </div>
    <h2
      class="mb-2 max-w-xl text-xl font-semibold text-gray-950"
      id="_r_0_"
    >
      No reputation yet
    </h2>
    <p
      class="mb-5 max-w-md text-sm leading-6 text-gray-700 sm:text-base"
    >
      Your reputation will be built as you complete contracts and receive feedback from clients. Start by creating and fulfilling your first contract.
    </p>
  </div>
</main>
`;

exports[`ReputationPageContent snapshot – empty state (null score) matches snapshot when score is null 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <div
    aria-labelledby="_r_3_"
    class="flex flex-col items-center justify-center px-4 py-8 text-center sm:px-8 sm:py-10"
    role="region"
  >
    <div
      aria-hidden="true"
      class="mb-5 inline-flex h-24 w-24 items-center justify-center rounded-2xl ring-1 bg-amber-50 text-amber-700 ring-amber-100"
    >
      <svg
        aria-hidden="true"
        class="h-16 w-16"
        fill="none"
        viewBox="0 0 64 64"
      >
        <path
          d="M32 10l6.2 12.6 13.9 2-10 9.8 2.4 13.8L32 41.7 19.6 48.2l2.4-13.8-10-9.8 13.9-2L32 10z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="4"
        />
        <path
          d="M24 54h16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
    </div>
    <h2
      class="mb-2 max-w-xl text-xl font-semibold text-gray-950"
      id="_r_3_"
    >
      No reputation yet
    </h2>
    <p
      class="mb-5 max-w-md text-sm leading-6 text-gray-700 sm:text-base"
    >
      Your reputation will be built as you complete contracts and receive feedback from clients. Start by creating and fulfilling your first contract.
    </p>
  </div>
</main>
`;

exports[`ReputationPageContent snapshot – empty state (undefined data) matches snapshot when reputationData is undefined 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <div
    aria-labelledby="_r_1_"
    class="flex flex-col items-center justify-center px-4 py-8 text-center sm:px-8 sm:py-10"
    role="region"
  >
    <div
      aria-hidden="true"
      class="mb-5 inline-flex h-24 w-24 items-center justify-center rounded-2xl ring-1 bg-amber-50 text-amber-700 ring-amber-100"
    >
      <svg
        aria-hidden="true"
        class="h-16 w-16"
        fill="none"
        viewBox="0 0 64 64"
      >
        <path
          d="M32 10l6.2 12.6 13.9 2-10 9.8 2.4 13.8L32 41.7 19.6 48.2l2.4-13.8-10-9.8 13.9-2L32 10z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="4"
        />
        <path
          d="M24 54h16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
    </div>
    <h2
      class="mb-2 max-w-xl text-xl font-semibold text-gray-950"
      id="_r_1_"
    >
      No reputation yet
    </h2>
    <p
      class="mb-5 max-w-md text-sm leading-6 text-gray-700 sm:text-base"
    >
      Your reputation will be built as you complete contracts and receive feedback from clients. Start by creating and fulfilling your first contract.
    </p>
  </div>
</main>
`;

exports[`ReputationPageContent snapshot – loaded state (default userName) matches snapshot when userName is omitted (defaults to "User") 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <section
    aria-labelledby="profile-heading"
    class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
  >
    <div
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <h2
        class="sr-only"
        id="profile-heading"
      >
        Reputation profile for 
        User
      </h2>
      <div
        class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex h-16 w-16 items-center justify-center rounded-2xl bg-slate-900 text-2xl font-semibold text-white"
          >
            U
          </div>
          <div>
            <p
              class="text-sm font-medium text-slate-500"
            >
              Reputation profile
            </p>
            <h1
              class="text-2xl font-semibold text-slate-950"
            >
              User
            </h1>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 text-slate-700 sm:p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
          >
            Privacy-friendly defaults
          </p>
          <p
            class="text-sm leading-6"
          >
            Only summary trust signals are shown by default. Sensitive metadata remains hidden.
          </p>
        </div>
      </div>
      <div
        class="mt-8 grid gap-4 sm:grid-cols-3"
      >
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
            id="reputation-score-label"
          >
            Reputation score
          </p>
          <p
            aria-labelledby="reputation-score-label"
            class="mt-3 text-3xl font-semibold text-slate-950"
          >
            <span
              aria-describedby="reputation-legend"
              aria-labelledby="reputation-score-label"
              aria-valuemax="5"
              aria-valuemin="0"
              aria-valuenow="3.8"
              role="meter"
            >
              <span
                class="sr-only"
              >
                Reputation score 
              </span>
              3.8
              <span
                class="sr-only"
              >
                 out of 
                5
              </span>
            </span>
          </p>
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
            id="reputation-level-label"
          >
            Level
          </p>
          <p
            aria-labelledby="reputation-level-label"
            class="mt-3 text-xl font-semibold text-slate-950"
          >
            <span
              class="sr-only"
            >
              Level 
            </span>
            Trusted Partner
          </p>
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
          >
            Explanation
          </p>
          <p
            class="mt-3 text-sm leading-6 text-slate-700"
          >
            Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
          </p>
        </div>
      </div>
      <div
        class="mt-6 border-t border-slate-200 pt-6"
      >
        <h2
          class="text-sm font-semibold text-slate-900"
          id="reputation-legend-title"
        >
          Reputation Level Legend
        </h2>
        <ul
          aria-labelledby="reputation-legend-title"
          class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
          id="reputation-legend"
        >
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              0.0
               - 
              1.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Newcomer
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              1.0
               - 
              2.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              2.0
               - 
              3.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Active Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-indigo-200 bg-indigo-50/50 text-indigo-900 font-semibold"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              3.0
               - 
              4.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Trusted Partner
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              4.0
               - 
              5.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Expert
            </p>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <div
        class="mb-6 flex items-center justify-between gap-4"
      >
        <div>
          <h2
            class="text-xl font-semibold text-slate-950"
          >
            Reputation history
          </h2>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            History is shown as safe, aggregated events with no wallet or personal metadata by default.
          </p>
        </div>
        <span
          class="rounded-full bg-slate-100 px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-slate-600"
        >
          Visible
        </span>
      </div>
      <ol
        class="space-y-4"
      >
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div>
              <p
                class="text-sm font-medium text-slate-500"
              >
                Verification
              </p>
              <p
                class="mt-1 text-base font-semibold text-slate-950"
              >
                Completed identity verification
              </p>
            </div>
            <time
              class="text-sm text-slate-500"
              datetime="2026-04-24"
            >
              2026-04-24
            </time>
          </div>
        </li>
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div>
              <p
                class="text-sm font-medium text-slate-500"
              >
                On-chain review
              </p>
              <p
                class="mt-1 text-base font-semibold text-slate-950"
              >
                Received positive trust signal
              </p>
            </div>
            <time
              class="text-sm text-slate-500"
              datetime="2026-04-23"
            >
              2026-04-23
            </time>
          </div>
        </li>
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div>
              <p
                class="text-sm font-medium text-slate-500"
              >
                Referral
              </p>
              <p
                class="mt-1 text-base font-semibold text-slate-950"
              >
                Referred two new community members
              </p>
            </div>
            <time
              class="text-sm text-slate-500"
              datetime="2026-04-20"
            >
              2026-04-20
            </time>
          </div>
        </li>
      </ol>
    </div>
  </section>
</main>
`;

exports[`ReputationPageContent snapshot – loaded state (full reputation) matches snapshot for full reputation with history 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <section
    aria-labelledby="profile-heading"
    class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
  >
    <div
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <h2
        class="sr-only"
        id="profile-heading"
      >
        Reputation profile for 
        Grace
      </h2>
      <div
        class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex h-16 w-16 items-center justify-center rounded-2xl bg-slate-900 text-2xl font-semibold text-white"
          >
            G
          </div>
          <div>
            <p
              class="text-sm font-medium text-slate-500"
            >
              Reputation profile
            </p>
            <h1
              class="text-2xl font-semibold text-slate-950"
            >
              Grace
            </h1>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 text-slate-700 sm:p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
          >
            Privacy-friendly defaults
          </p>
          <p
            class="text-sm leading-6"
          >
            Only summary trust signals are shown by default. Sensitive metadata remains hidden.
          </p>
        </div>
      </div>
      <div
        class="mt-8 grid gap-4 sm:grid-cols-3"
      >
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
            id="reputation-score-label"
          >
            Reputation score
          </p>
          <p
            aria-labelledby="reputation-score-label"
            class="mt-3 text-3xl font-semibold text-slate-950"
          >
            <span
              aria-describedby="reputation-legend"
              aria-labelledby="reputation-score-label"
              aria-valuemax="5"
              aria-valuemin="0"
              aria-valuenow="3.8"
              role="meter"
            >
              <span
                class="sr-only"
              >
                Reputation score 
              </span>
              3.8
              <span
                class="sr-only"
              >
                 out of 
                5
              </span>
            </span>
          </p>
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
            id="reputation-level-label"
          >
            Level
          </p>
          <p
            aria-labelledby="reputation-level-label"
            class="mt-3 text-xl font-semibold text-slate-950"
          >
            <span
              class="sr-only"
            >
              Level 
            </span>
            Trusted Partner
          </p>
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
          >
            Explanation
          </p>
          <p
            class="mt-3 text-sm leading-6 text-slate-700"
          >
            Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
          </p>
        </div>
      </div>
      <div
        class="mt-6 border-t border-slate-200 pt-6"
      >
        <h2
          class="text-sm font-semibold text-slate-900"
          id="reputation-legend-title"
        >
          Reputation Level Legend
        </h2>
        <ul
          aria-labelledby="reputation-legend-title"
          class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
          id="reputation-legend"
        >
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              0.0
               - 
              1.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Newcomer
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              1.0
               - 
              2.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              2.0
               - 
              3.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Active Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-indigo-200 bg-indigo-50/50 text-indigo-900 font-semibold"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              3.0
               - 
              4.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Trusted Partner
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              4.0
               - 
              5.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Expert
            </p>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <div
        class="mb-6 flex items-center justify-between gap-4"
      >
        <div>
          <h2
            class="text-xl font-semibold text-slate-950"
          >
            Reputation history
          </h2>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            History is shown as safe, aggregated events with no wallet or personal metadata by default.
          </p>
        </div>
        <span
          class="rounded-full bg-slate-100 px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-slate-600"
        >
          Visible
        </span>
      </div>
      <ol
        class="space-y-4"
      >
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div>
              <p
                class="text-sm font-medium text-slate-500"
              >
                Verification
              </p>
              <p
                class="mt-1 text-base font-semibold text-slate-950"
              >
                Completed identity verification
              </p>
            </div>
            <time
              class="text-sm text-slate-500"
              datetime="2026-04-24"
            >
              2026-04-24
            </time>
          </div>
        </li>
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div>
              <p
                class="text-sm font-medium text-slate-500"
              >
                On-chain review
              </p>
              <p
                class="mt-1 text-base font-semibold text-slate-950"
              >
                Received positive trust signal
              </p>
            </div>
            <time
              class="text-sm text-slate-500"
              datetime="2026-04-23"
            >
              2026-04-23
            </time>
          </div>
        </li>
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div>
              <p
                class="text-sm font-medium text-slate-500"
              >
                Referral
              </p>
              <p
                class="mt-1 text-base font-semibold text-slate-950"
              >
                Referred two new community members
              </p>
            </div>
            <time
              class="text-sm text-slate-500"
              datetime="2026-04-20"
            >
              2026-04-20
            </time>
          </div>
        </li>
      </ol>
    </div>
  </section>
</main>
`;

exports[`ReputationPageContent snapshot – partial state (score === 0) matches snapshot when score is exactly 0 (edge: falsy-but-valid) 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <section
    aria-labelledby="profile-heading"
    class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
  >
    <div
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <h2
        class="sr-only"
        id="profile-heading"
      >
        Reputation profile for 
        Frank
      </h2>
      <div
        class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex h-16 w-16 items-center justify-center rounded-2xl bg-slate-900 text-2xl font-semibold text-white"
          >
            F
          </div>
          <div>
            <p
              class="text-sm font-medium text-slate-500"
            >
              Reputation profile
            </p>
            <h1
              class="text-2xl font-semibold text-slate-950"
            >
              Frank
            </h1>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 text-slate-700 sm:p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
          >
            Privacy-friendly defaults
          </p>
          <p
            class="text-sm leading-6"
          >
            Only summary trust signals are shown by default. Sensitive metadata remains hidden.
          </p>
        </div>
      </div>
      <div
        class="mt-8 grid gap-4 sm:grid-cols-3"
      >
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
            id="reputation-score-label"
          >
            Reputation score
          </p>
          <p
            aria-labelledby="reputation-score-label"
            class="mt-3 text-3xl font-semibold text-slate-950"
          >
            <span
              aria-describedby="reputation-legend"
              aria-labelledby="reputation-score-label"
              aria-valuemax="5"
              aria-valuemin="0"
              aria-valuenow="0"
              role="meter"
            >
              <span
                class="sr-only"
              >
                Reputation score 
              </span>
              0
              <span
                class="sr-only"
              >
                 out of 
                5
              </span>
            </span>
          </p>
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
            id="reputation-level-label"
          >
            Level
          </p>
          <p
            aria-labelledby="reputation-level-label"
            class="mt-3 text-xl font-semibold text-slate-950"
          >
            <span
              class="sr-only"
            >
              Level 
            </span>
            Newcomer
          </p>
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
          >
            Explanation
          </p>
          <p
            class="mt-3 text-sm leading-6 text-slate-700"
          >
            Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
          </p>
        </div>
      </div>
      <div
        class="mt-6 border-t border-slate-200 pt-6"
      >
        <h2
          class="text-sm font-semibold text-slate-900"
          id="reputation-legend-title"
        >
          Reputation Level Legend
        </h2>
        <ul
          aria-labelledby="reputation-legend-title"
          class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
          id="reputation-legend"
        >
          <li
            class="rounded-2xl border p-3 transition-colors border-indigo-200 bg-indigo-50/50 text-indigo-900 font-semibold"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              0.0
               - 
              1.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Newcomer
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              1.0
               - 
              2.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              2.0
               - 
              3.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Active Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              3.0
               - 
              4.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Trusted Partner
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              4.0
               - 
              5.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Expert
            </p>
          </li>
        </ul>
      </div>
      <div
        class="mt-6 rounded-3xl border border-amber-200 bg-amber-50 p-4 text-amber-900"
      >
        <p
          class="font-semibold"
        >
          Partial reputation data
        </p>
        <p
          class="mt-1 text-sm leading-6"
        >
          A score exists but history is currently hidden until verified actions are available. This keeps your profile safe and private.
        </p>
      </div>
    </div>
    <div
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <div
        class="mb-6 flex items-center justify-between gap-4"
      >
        <div>
          <h2
            class="text-xl font-semibold text-slate-950"
          >
            Reputation history
          </h2>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            History is shown as safe, aggregated events with no wallet or personal metadata by default.
          </p>
        </div>
        <span
          class="rounded-full bg-slate-100 px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-slate-600"
        >
          Private by default
        </span>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-6 text-slate-700"
      >
        <p
          class="font-semibold text-slate-900"
        >
          No reputation history available yet.
        </p>
        <p
          class="mt-2 text-sm leading-6"
        >
          Reputation history appears once you complete verified actions. Your profile remains safe and privacy-friendly until then.
        </p>
      </div>
    </div>
  </section>
</main>
`;

exports[`ReputationPageContent snapshot – partial state (score, no history) matches snapshot for partial reputation (score only) 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <section
    aria-labelledby="profile-heading"
    class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
  >
    <div
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <h2
        class="sr-only"
        id="profile-heading"
      >
        Reputation profile for 
        Eve
      </h2>
      <div
        class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex h-16 w-16 items-center justify-center rounded-2xl bg-slate-900 text-2xl font-semibold text-white"
          >
            E
          </div>
          <div>
            <p
              class="text-sm font-medium text-slate-500"
            >
              Reputation profile
            </p>
            <h1
              class="text-2xl font-semibold text-slate-950"
            >
              Eve
            </h1>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 text-slate-700 sm:p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
          >
            Privacy-friendly defaults
          </p>
          <p
            class="text-sm leading-6"
          >
            Only summary trust signals are shown by default. Sensitive metadata remains hidden.
          </p>
        </div>
      </div>
      <div
        class="mt-8 grid gap-4 sm:grid-cols-3"
      >
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
            id="reputation-score-label"
          >
            Reputation score
          </p>
          <p
            aria-labelledby="reputation-score-label"
            class="mt-3 text-3xl font-semibold text-slate-950"
          >
            <span
              aria-describedby="reputation-legend"
              aria-labelledby="reputation-score-label"
              aria-valuemax="5"
              aria-valuemin="0"
              aria-valuenow="2.1"
              role="meter"
            >
              <span
                class="sr-only"
              >
                Reputation score 
              </span>
              2.1
              <span
                class="sr-only"
              >
                 out of 
                5
              </span>
            </span>
          </p>
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
            id="reputation-level-label"
          >
            Level
          </p>
          <p
            aria-labelledby="reputation-level-label"
            class="mt-3 text-xl font-semibold text-slate-950"
          >
            <span
              class="sr-only"
            >
              Level 
            </span>
            Active Contributor
          </p>
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <p
            class="text-sm font-medium text-slate-500"
          >
            Explanation
          </p>
          <p
            class="mt-3 text-sm leading-6 text-slate-700"
          >
            Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
          </p>
        </div>
      </div>
      <div
        class="mt-6 border-t border-slate-200 pt-6"
      >
        <h2
          class="text-sm font-semibold text-slate-900"
          id="reputation-legend-title"
        >
          Reputation Level Legend
        </h2>
        <ul
          aria-labelledby="reputation-legend-title"
          class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
          id="reputation-legend"
        >
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              0.0
               - 
              1.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Newcomer
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              1.0
               - 
              2.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-indigo-200 bg-indigo-50/50 text-indigo-900 font-semibold"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              2.0
               - 
              3.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Active Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              3.0
               - 
              4.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Trusted Partner
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-slate-400"
            >
              4.0
               - 
              5.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Expert
            </p>
          </li>
        </ul>
      </div>
      <div
        class="mt-6 rounded-3xl border border-amber-200 bg-amber-50 p-4 text-amber-900"
      >
        <p
          class="font-semibold"
        >
          Partial reputation data
        </p>
        <p
          class="mt-1 text-sm leading-6"
        >
          A score exists but history is currently hidden until verified actions are available. This keeps your profile safe and private.
        </p>
      </div>
    </div>
    <div
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <div
        class="mb-6 flex items-center justify-between gap-4"
      >
        <div>
          <h2
            class="text-xl font-semibold text-slate-950"
          >
            Reputation history
          </h2>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            History is shown as safe, aggregated events with no wallet or personal metadata by default.
          </p>
        </div>
        <span
          class="rounded-full bg-slate-100 px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-slate-600"
        >
          Private by default
        </span>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-6 text-slate-700"
      >
        <p
          class="font-semibold text-slate-900"
        >
          No reputation history available yet.
        </p>
        <p
          class="mt-2 text-sm leading-6"
        >
          Reputation history appears once you complete verified actions. Your profile remains safe and privacy-friendly until then.
        </p>
      </div>
    </div>
  </section>
</main>
`;
